mybatis type handler
Change-Id: Ibd23798b03683508a939a58a46b91c6d0e0e54e8