@@ -2,7 +2,6 @@ package com.mcg.exercise.advice;
 
 import com.alibaba.fastjson.JSON;
 import com.alibaba.fastjson.serializer.SerializerFeature;
-import com.sun.xml.internal.fastinfoset.Encoder;
 import lombok.extern.slf4j.Slf4j;
 import org.aspectj.lang.ProceedingJoinPoint;
 import org.aspectj.lang.annotation.Around;
@@ -15,6 +14,7 @@ import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
 import javax.servlet.http.HttpServletRequest;
+import java.beans.Encoder;
 import java.net.URLDecoder;
 
 /**
@@ -61,7 +61,7 @@ public class LogAspect {
                     params = query;
                 }
                 if (null != params) {
-                    params = URLDecoder.decode(params, Encoder.UTF_8);
+                    params = URLDecoder.decode(params, "UTF-8");
                 }
             }
             log.info("requestMethod:{}, uri:{},request params:{},response:{}, execute time:{}ms",
